<resources>
    <string name="app_name">SFAMobi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="reset_pwd_tv_str">Reset Password</string>
    <string name="reset_pwd_btn_str">Reset</string>
    <string name="email_atv_hint_str">Enter emaild</string>
    <string name="verification_atv_hint_str">Enter emaild</string>
    <string name="change_pwd_tv_str">Change Password</string>
    <string name="change_pwd_btn_str">Change Password</string>
    <string name="old_pwd_atv_hint_str">Old Password</string>
    <string name="one_time_pwd_atv_hint_str">One Time Password</string>
    <string name="new_pwd_atv_hint_str">New Password</string>
    <string name="confirm_pwd_atv_hint_str">Re-Enter Password</string>
    <string name="create_new_lead_tv_str">Create New Lead</string>
    <string name="add_contact_btn_str">Add contact</string>
    <string name="description_details_str">Description(Max 300 character)</string>
    <string name="max_200_char_et_hint_str">Max 200 char</string>
    <string name="lead_status_tv_str">Lead status</string>
    <string name="hot_chkbox_str">Hot</string>
    <string name="warm_chkbox_str">Warm</string>
    <string name="Coold_chkbox_str">Cold</string>
    <string name="save_btn_str">Save</string>
    <string name="convert_to_opportunity_btn_str">Convert to Opportunity</string>
    <string name="lead_size_et_hint_str">Lead size</string>
    <string name="add_new_company_contact_tv_str">Add Contact</string>
    <string name="add_primary_contact_tv_str">Add Primary Contact</string>
    <string name="company_name_atv_hint_str">Company Name </string>
    <string name="company_email_et_hint_str">Email ID</string>
    <string name="company_phoneno_et_hint_str">Phone Number</string>
    <string name="company_address_et_hint_str">Address </string>
    <string name="contact_name_atv_hint_str">Contact Name </string>
    <string name="contact_number_et_hint_str">Phone Number</string>
    <string name="contact_email_et_hint_str">Email ID</string>
    <string name="contact_role_atv_hint_str">Role</string>
    <string name="contact_address_atv_hint_str">Address</string>
    <string name="contact_person_atv_hint_str">Person</string>
    <string name="button_add">Add</string>
    <string name="mange_company_contact_tv_str">Manage Contact</string>
    <string name="edit_btn_str">Edit</string>
    <string name="show_btn_str">Show</string>
    <string name="primary_contact_person_str">Contact Name(Primary Contact) </string>
    <string name="daily_visit_report_tv_str">Daily Visit Report</string>
    <string name="client_name_tv_str">Client Name</string>
    <string name="client_email_id">Email Id</string>
    <string name="client_location">Client Location</string>
    <string name="sales_starting_location">Starting Location</string>
    <string name="client_contact_person">Contact Person</string>
    <string name="client_phone_no">Phone Number</string>
    <string name="client_address">Address</string>
    <string name="client_summary">Summary(Max 200 character)</string>
    <string name="client_contact_name">Contact Name</string>
    <string name="client_details_required">Detailed Requirement(Max 200 character)</string>
    <string name="activity_type">Activity Type</string>
    <string name="edit_Username">Name</string>
    <string name="edit_Role">Role</string>
    <string name="edit_Email">Email</string>
    <string name="edit_Number">Contact Number</string>
    <string name="edit_Username2">Name</string>
    <string name="edit_Role2">Role</string>
    <string name="edit_Email2">Email</string>
    <string name="edit_Number2">Contact Number</string>
    <string name="save">Save</string>
    <string name="name_View">Name</string>
    <string name="roll_View">Roll</string>
    <string name="Email_View">Email</string>
    <string name="Contact_View">Contact Number</string>
    <string name="name_label">Rohit</string>
    <string name="roll_label">Sales executive</string>
    <string name="Email_label">rohit@gmail.com</string>
    <string name="Contact_label">  9246789012</string>
    <string name="name_saved"></string>
    <string name="roll_saved"></string>
    <string name="Email_saved"></string>
    <string name="Contact_saved"></string>
    <string name="name_saving">Name</string>
    <string name="roll_saving">Roll</string>
    <string name="Email_saving">Email</string>
    <string name="Contact_saving">       Contact Number</string>
    <string name="code">Country Code</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="header"></string>
    <string name="view_contact">View Contact</string>
    <string name="add_photos">Add Photos</string>
    <string name="headerText">Add Meeting</string>
    <string name="enter_meeting">Meeting Title</string>
    <string name="enter_client_name">Client Name</string>
    <string name="enter_meeting_info">Meeting Info</string>
    <string name="location">Location</string>
    <string name="select_Date">Date</string>
    <string name="Enter_Time">Time</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="login_title">Login Here</string>
    <string name="enter_username_hint">Enter Name</string>
    <string name="enter_password_hint">Password</string>
    <string name="forgotpassword_button">Forgot password ?</string>
    <string name="login_button">login</string>
    <string name="register_button">Create an account</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_create_account">Create an account</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="powered_by_dahlia_technologies"><u>Powered by Dahlia Technologies</u>.</string>
    <string name="uri_dahlia_technologies"><u>WWW.Dahlia-tech.com</u></string>
    <string name="uri_sfamobi"><u>WWW.Sfamobi.com</u></string>
    <string name="back_button">Back</string>
    <string name="edit_Username_register">User Name</string>
    <string name="edit_password">Password</string>
    <string name="edit_ConformPassword">Conform Password</string>
    <string name="edit_Email_register">Email</string>
    <string name="Mobile_number">Mobile Number</string>
    <string name="Company_Name">Company Name</string>
    <string name="register_button2">Register</string>
    <string name="register_label">Register</string>
    <string name="country_code">Countrycode</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="total_cost_with_rupee_symbol">Total Cost(\u20B9)</string>
    <string name="estimated_amount">Estimated Amount(\u20B9)</string>
    <string name="rupees">\u20B9</string>
    <string name="spend_rupees">Spend(\u20B9)</string>
    <string name="rupess_symbol_with_amount">\u20B9 %1$s</string>
    <string name="my_text">
  <![CDATA[
    <b> Hi,</b><br/>
    <b>Your daily expenses are : </b>\u20B9 10,000<br/>
    <b>Travel:</b> \u20B9 3,000<br/>
    <b>Lodging:</b> \u20B9 4,000<br/>
    <b>Boarding:</b> \u20B9 2,000<br/>
    <b>Other:</b> \u20B9 1,000<br/>
    <b></b> <br/>
    <b>Best Regards,</b><br/>
    <b>SFAMobi Team</b><br/>
    <i>Copyright © 2016 Dahlia Technologies </i>
  ]]>
</string>
      <string name="travel_expense_text">
  <![CDATA[
    <b> Hi,</b><br/>
    <b>Your daily Travel expenses are : </b>\u20B9 70<br/>
    <b>Start Location:</b> Amenora park town<br/>
    <b>Client Location:</b> Bramha Suncity, Wadgaon Sheri, Pune<br/>
    <b>Distance:</b> 8 KM <br/>
    <b>Amount:</b> \u20B9 175<br/>
    <b></b> <br/>
    <b>Best Regards,</b><br/>
    <b>SFAMobi Team</b><br/>
    <i>Copyright © 2016 Dahlia Technologies </i>
  ]]>
</string>
    <string name="shop">Shop</string>
    <string name="total_expenses">Total expenses</string>
    <string name="daily_expenses">Daily Expense</string>
    <string name="weekly_expenses">Weekly Expense</string>
    <string name="monthly_expenses">Monthly Expense</string>
    <string name="quotation_discount">discount(%)</string>
    <string name="quotation_send_approval">Send for approval</string>
    <string name="quotation_create_order">Create Order</string>
    <string name="quotation_history">Quotation History</string>
    <string name="lead_client_name">Client Name</string>
    <string name="lead_client_email">Email Id</string>
    <string name="lead_client_contact">Contact Number</string>
    <string name="lead_client_address">Address</string>
    <string name="lead_client_contact_primary">Contact Name(Primary)</string>
    <string name="lead_client_email_primary">Email Id</string>
    <string name="lead_client_phone_primary">Contact Number</string>
    <string name="lead_client_role">Role</string>
    <string name="lead_client_lead_size">Lead Size</string>
    <string name="lead_client_description">Description</string>
    <string name="lead_client_lead_status">Lead Status</string>
    <string name="logged_in_welcome">Welcome</string>
    <string name="logged_in_success">Logged in successfully</string>
    <string name="log_out">Logout</string>
    <string name="travel_distance">Distance</string>
    <string name="tv_plan_travel">How do you plan to travel?</string>
    <string name="travel_four_wheeler">Four-Wheeler(Self-Owned)</string>
    <string name="travel_two_wheeler">Two-Wheeler(Self-Owned)</string>
    <string name="travel_public_vehicle">Public Travel</string>
    <string name="travel_auto_rickshaw">Auto Rickshaw</string>
    <string name="travel_radio_cab">Radio Cab</string>
    <string name="travel_start_journey">Start Journey</string>
    <string name="travel_end_journey">End Journey</string>
    <string name="tv_choose">Choose</string>
    <string name="action_radio_local">Local</string>
    <string name="action_radio_outstation">Outstation</string>
    <string name="catalog_product_name">Name</string>
    <string name="catalog_product_id">Id</string>
    <string name="catalog_product_desc">Product Description</string>
    <string name="catalog_product_price">Show Price</string>
    <string name="catalog_product_avail_quantity">Available Quantity</string>
    <string name="recipt_ride_details">Ride Details</string>
    <string name="recipt_bill_details">Bill Details</string>
    <string name="recipt_base_fair">Base Fare(per KM)</string>
    <string name="recipt_total_distance">Total Distance</string>
    <string name="recipt_total_bill">Total Bill(rounded off)</string>
    <string name="recipt_payment">Payment</string>
    <string name="recipt_paid_cash">Paid by cash</string>
    <string name="catalog_create_quotation">Create Quotation</string>
    <string name="registered_success">Registered successfully</string>
    <string name="opportunity">Opportunity</string>
    <string name="my_leads">My Leads</string>
    <string name="my_meetings">My Meetings</string>
    <string name="button_cancel">Cancel</string>
    <string name="tv_by_date">By Date</string>
    <string name="tv_from">From</string>
    <string name="tv_to">To</string>
    <string name="tv_by_category">By Category</string>
    <string name="button_submit">Submit</string>
    <string name="action_delete_contact">Really you want to delete this \n contact?</string>
    <string name="button_yes">Yes</string>
    <string name="button_confirm">Confirm</string>
    <string name="tv_transactions">Transactions</string>
    <string name="tv_set_reminder">Set Reminder</string>
</resources>