<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/dim_120"
        android:layout_marginTop="@dimen/dim_40"
        android:hint="@string/edit_Username"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dim_90"
        android:hint="@string/edit_Role"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText2"
        android:hint="@string/edit_Email"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText3"
        android:hint="@string/Contact_View"
        android:inputType="number"
        android:maxLength="10"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText4"
        android:layout_marginTop="@dimen/dim_40"
        android:gravity="center">


        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dim_50"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editText3"
            android:background="@drawable/buttonshape"
            android:text="@string/save"
            android:textColor="@color/colorWhite" />


        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dim_50"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editText3"
            android:layout_marginLeft="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/button_cancel"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dim_55"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="Edit contacts here"
        android:textColor="@color/colorWhite"
        android:textSize="20dp" />


</RelativeLayout>
