<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/dim_100"
        android:layout_height="@dimen/dim_30"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/logged_in_welcome"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dim_50"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="@dimen/dim_76"
        android:layout_marginStart="@dimen/dim_76"
        android:layout_marginTop="@dimen/dim_42"
        android:text="@string/logged_in_success"
        android:textColor="@color/colorWhite" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dim_33"
        android:layout_above="@+id/textView3"
        android:layout_alignParentRight="true"
        android:background="@drawable/buttonshape"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="18dp" />
</RelativeLayout>
