<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="20dp">

    <ScrollView
        android:id="@+id/lead_sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/save_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_lead_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/add_new_company_contact_tv_str"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/company_name_til"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="25dp">

                <AutoCompleteTextView
                    android:id="@+id/company_name_atv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/company_name_atv_hint_str"
                    android:imeOptions="actionNext"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/company_address_til"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/company_address_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/company_address_et_hint_str"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/company_email_til"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/company_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/company_email_et_hint_str"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/company_phoneno_til"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/company_phoneno_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/company_phoneno_et_hint_str"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_person_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/add_primary_contact_tv_str"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_name_til"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <AutoCompleteTextView
                    android:id="@+id/contact_name_atv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_name_atv_hint_str"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_number_til"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/contact_number_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_number_et_hint_str"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_email_til"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/contact_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_email_et_hint_str"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/contact_roll_til"
                style="@style/TextLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/contact_roll_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contact_role_atv_hint_str"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="@color/colorWhite"
                    android:textSize="18dp"
                    android:maxLines="1"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_selector"
        android:text="@string/save_btn_str"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="21dp"/>


</RelativeLayout>